6차 release (#596)
* feat: 공유 페이지 이동 배너 만들기 (#226)

* refactor: inputField focus 상태 추가
* feat: 공유 문제집 이동 배너 추가

Co-authored-by: Kyle <mkitigy@gmail.com>

* Q04 - 바로 풀어보기 API를 구현한다 (#216)

* feat&test: 문제집에서 바로 풀기 기능 구현 및 테스트 추가

* test: increaseEncounterCount 테스트 추가

* test: Quiz 도메인에 incrementEncounterCount Test 추가

* fix: 문제집에서 바로풀기 시 마주친 횟수 증가되지 않도록 수정

* refactor: 문제집에서 바로풀기 시 다음에 또보기 취소 기능 삭제

* feat: 문제집이 public인지 확인하는 기능 추가

* feat: CardAddPage, CardEditPage 구현 (#229)

Co-authored-by: dudtjr913 <dudtjr913@naver.com>

* U05 - Role이 admin인 User만 admin api에 접근이 가능하도록 AdminInterceptor를 추가한다. (#217)

* feat: GithubUserInfoResponse에서 Role을 추가해서 User로 변환되도록 추가

* feat: AdminInterceptor 및 테스트 추가

* refactor: AdminAcceptanceTest내 Category를 Workbook으로 수정

* UI10 - 스크롤 바를 커스텀한다 (#233)

* refactor: 커스텀 스크롤 바 구현

Co-authored-by: Kyle <mkitigy@gmail.com>

* W04 - Workbook을 조회하는 기능을 개선한다. (#218)

* feat: Workbook에 User 필드 추가

* refactor: 일부 주관적인 스타일을 반영

* feat: CardResponse에 필드 추가

* refactor: 패키지 이동 dto -> dto/workbook // workResponse 필드 수정

* feat: 문제집의 주인을 알아내는 기능 구현

* feat: User 테이블에 Role 추가

* etc: ddl, dml 수정

* refactor: DataLoader에서 ADMIN으로 유저 생성 후 데이터 초기화 유저로 이용

* refactor: CardResponse 필드 조정

* refactor: 데이터로더의 더미 문제집 공개여부 true로 변경

* refactor: 테스트 성공하도록 수정

* refactor: TestUtils의 문자열 생성 메서드 이름 변경

* feat: 검색어 객체인 SearchKeyword 생성

* feat: 검색 조건 객체인 WorkbookCriteria 생성

* feat: 문제집 검색을 위한 resolver 생성 및 API에 적용

* feat: 검색에 활용할 AccessType 클래스 구현

* refactor: boolean 대신 AccessType을 사용하도록 수정

* refactor: 탭 문자와 개행 문자를 고려하여 수정

* refactor: 필드명 수정 (workbookName -> name)

* etc: dml 수정

* feat: 문제집의 이름에 단어가 포함되어 있는지 검사하는 기능 추가

* feat: 검색시 주인을 설정하는 OwerType 클래스 생성

* refactor: 예외명 변경, 이외 자잘한 수정

* feat: 임시 서비스 로직 추가

* feat: 깨지는 테스트를 수정 (로그인 및 문제집 공개)

* feat: RequestBuilder에 query parameter를 위한 기능 추가

* refactor: lombok.EqualsAndHashCode 사용

* refactor: 테스트 구조 원상 복구

* ref